Ejercicios Practica 3  DWA

--- a/Practica-3/ejercicio1.html
+++ b/Practica-3/ejercicio1.html
@@ -16,7 +16,7 @@
 
     /* Estilos para los elementos */
     .elemento {
-      padding: 20px;
+      padding: 20px; /* Agrega un relleno al elemento */
       border: 1px solid #ccc;
       text-align: center;
     }
