--- a/Practica-3/ejercicio2.html
+++ b/Practica-3/ejercicio2.html
@@ -48,7 +48,7 @@
 
 </style>
 <body>
-    <main class="container">
+    <main class="container"> <!-- contenedor Principal -->
         <div class="card">
             <img class="product-img" src="" alt="Producto 1">
             <h3 class="product-name">Nombre del Producto</h3>
