--- a/Practica-7/index.html
+++ b/Practica-7/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Menu Horizontal</title>
+    <title>Menu Hoizontal</title>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- CSS -->
@@ -12,7 +12,7 @@
 <body>
     <!-- Barra de navegacion Bootstrap -->
     <!-- EJERCICIO 1 -->
-    <!-- <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a href="#" class="nav-link">Inicio</a>
@@ -30,7 +30,7 @@
                 <a href="#" class="nav-link">Contacto</a>
             </li>
         </ul>
-    </nav> -->
+    </nav>
 
     <!-- EJERCICIO 2 -->
     <!-- <nav class="navbar">
@@ -54,48 +54,48 @@
     </nav> -->
 
     <!-- EJERCICIO 3 -->
-    <div class="container">
+    <!-- <div class="container">
         <div class="card-container">
-            <!-- Targeta 1 -->
+            Targeta 1
             <div class="col-md-4 custom-card">
                 <div class="card">
-                    <!-- Primer Titulo -->
+                    Primer Titulo
                     <div class="card-title">Cafe Americano</div>
                     <div class="card-body">
-                        <!-- Contenido de la Targeta -->
-                        <img src="./img/coffee_1.svg" alt="">
+                        Contenido de la Targeta
+                        <!-<img src="./img/coffee_1.svg" alt="">
                     </div>
                     <div class="card-footer">Precio Unitario $2.00</div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Targeta 2 -->
-            <div class="col-md-4 custom-card">
+            <!-- <div class="col-md-4 custom-card">
                 <div class="card">
-                    <!-- Primer Titulo -->
-                    <div class="card-title">Capuchino</div>
-                    <div class="card-body">
+                    <!- Primer Titulo -->
+                    <!-- <div class="card-title">Capuchino</div>
+                    <div class="card-body"> -->
                         <!-- Contenido de la Targeta -->
-                        <img src="./img/coffee_2.svg" alt="">
-                    </div>
+                        <!-- <img src="./img/coffee_2.svg" alt=""> -->
+                    <!-- </div>
                     <div class="card-footer">Precio Unitario $4.00</div>
                 </div>
-            </div>
+            </div> --> 
 
             <!-- Targeta 3 -->
-            <div class="col-md-4 custom-card">
-                <div class="card">
+            <!-- <div class="col-md-4 custom-card">
+                <div class="card"> -->
                     <!-- Primer Titulo -->
-                    <div class="card-title">Cafe Helado</div>
-                    <div class="card-body">
+                    <!-- <div class="card-title">Cafe Helado</div>
+                    <div class="card-body"> -->
                         <!-- Contenido de la Targeta -->
-                        <img src="./img/coffee_1.svg" alt="">
+                        <!-- <img src="./img/coffee_1.svg" alt="">
                     </div>
                     <div class="card-footer">Precio Unitario $3.50</div>
                 </div>
             </div>
         </div>
-    </div>
+    </div>  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
