--- a/Practica-14/index.html
+++ b/Practica-14/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Operaciones Matematicas</title>
 </head>
 <body>
     <div class="container">
+        <h1>Operaciones Basicas</h1>
+        
         <label for="numero1"></label>
         <input type="number" id="numero1">
 
@@ -17,6 +20,10 @@
         <button onclick="restar()">RESTA</button>
         <button onclick="multiplicar()">MULTIPLICACION</button>
         <button onclick="dividir()">DIVISION</button>
+
+        <p id="resultado"></p>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
